add getting user id.

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 <body>
     {% if oauth_url %}
         <a href="{{ oauth_url }}">ログイン・認証</a>
-    {% else %}
-        Login OK!
+    {% endif %}
+    {% if stocks %}
     {% endif %}
 </body>
 </html>
